[package]
name = "telegram-auth-rs"
description = "Telegram Auth validation"
publish = true
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/shakhzodme/telegram-auth-rs"
exclude = [".direnv/*", "nix/*", "flake.nix", "flake.lock", ".envrs"]

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
serde_json = "1.0.133"
sha2 = "0.10.8"
